fixed h1 text align left
#title .container-fluid { /* Combining Selectors*/
    padding: 3% 15% 7%;
    /* text-align: left; */
}

Worked fine when text align was here
#title {
    text-align: left;
}

--- a/css/styles.css
+++ b/css/styles.css
@@ -69,7 +69,7 @@ P {
 
 #title .container-fluid { /* Combining Selectors*/
     padding: 3% 15% 7%;
-    text-align: left;
+    /* text-align: left; */
 }
 
 /* Title Image */
